--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>"My first web page at Life Choices"</title>
 </head>
 <body>
+<header>
+
+</header>
     <main>
 <h1><b>Unathi's Favourite Hobbies and Goals<b></h1>
 <br>
@@ -14,7 +17,10 @@
 <br>
 <h2><B>Goals<B></h2>
 <p><i>My goal is to pass and become a developer by the end of the internship<i></p>
-</main>  
+</main>
+<footer>
+    
+</footer>  
 </body>
 </html>
 
